Функционал классов FileWorker перенесен прямо в Converter - полный цикл конвертации теперь реализован в нем. Сами классы FileWorker и связанные с ними классы удалены